--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-uncss": "^1.0.6"
+  },
+  "dependencies": {
+    "imagemin-webp": "^5.1.0"
   }
 }
