--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-imagemin": "^6.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-responsive": "^3.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-uncss": "^1.0.6"
   },
