--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/cuk-danijela/jekyll-theme#readme",
   "devDependencies": {
+    "@hapi/hoek": "^9.0.2",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -26,10 +27,12 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-responsive": "^3.0.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-uncss": "^1.0.6"
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
+    "@hapi/bounce": "^2.0.0",
+    "@hapi/cryptiles": "^5.0.0",
+    "hoek": "^6.1.3",
     "imagemin-webp": "^5.1.0",
     "lodash.template": "^4.5.0"
   }
