--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-responsive": "^3.0.1",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "gulp-uncss-sp": "0.0.1"
   },
   "dependencies": {
     "@hapi/bounce": "^2.0.0",
