--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
   "dependencies": {
     "@hapi/bounce": "^2.0.0",
     "@hapi/cryptiles": "^5.0.0",
+    "cryptiles": "^4.1.3",
     "hoek": "^6.1.3",
     "imagemin-webp": "^5.1.0",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "request": "^2.88.2",
+    "tough-cookie": "^4.0.0"
   }
 }
