--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cuk-danijela/jekyll-theme.git"
+    "url": "https://github.com/cuk-danijela/cuk-danijela.github.io.git"
   },
   "author": "Cuk Danijela",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cuk-danijela/jekyll-theme/issues"
+    "url": "https://github.com/cuk-danijela/cuk-danijela.github.io.git"
   },
-  "homepage": "https://github.com/cuk-danijela/jekyll-theme#readme",
+  "homepage": "https://github.com/cuk-danijela/cuk-danijela.github.io.git",
   "devDependencies": {
     "@hapi/hoek": "^9.0.4",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean-css": "^4.2.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^6.2.0",
     "gulp-postcss": "^8.0.0",
@@ -32,10 +32,12 @@
   },
   "dependencies": {
     "@hapi/bounce": "^2.0.0",
-    "@hapi/cryptiles": "^5.0.0",
+    "@hapi/cryptiles": "^5.1.0",
+    "bootstrap": "^4.5.0",
     "cryptiles": "^4.1.3",
     "hoek": "^6.1.3",
     "imagemin-webp": "^5.1.0",
+    "jquery": "^3.5.1",
     "lodash.template": "^4.5.0",
     "request": "^2.88.2",
     "tough-cookie": "^4.0.0"
