--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.5.1",
     "lodash.template": "^4.5.0",
     "request": "^2.88.2",
-    "tough-cookie": "^4.0.0"
+    "tough-cookie": "^4.0.0",
+    "yargs-parser": "^20.2.0"
   }
 }
