--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "devDependencies": {
     "@hapi/hoek": "^9.2.0",
     "browser-sync": "^2.27.4",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^6.2.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-responsive": "^3.0.1",
@@ -34,6 +34,7 @@
     "@hapi/bounce": "^2.0.0",
     "@hapi/cryptiles": "^5.1.0",
     "bootstrap": "^4.6.0",
+    "color-string": "^1.6.0",
     "cryptiles": "^4.1.3",
     "hoek": "^6.1.3",
     "imagemin-webp": "^5.1.0",
@@ -41,6 +42,7 @@
     "lodash.template": "^4.5.0",
     "request": "^2.88.2",
     "tough-cookie": "^4.0.0",
+    "trim-newlines": "^4.0.2",
     "yargs-parser": "^20.2.9"
   }
 }
